team page HTML layout done

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
+  
 </head>
 <body>
 <div id = "container">
@@ -21,10 +19,11 @@
 <div class = "head">
 
 <nav>
-    <a href= "#">Home </a>
+    <a href= "head">Home </a>
     <a href = "#"> Stories </a>
-    <a href = "#"> Tell Your Story</a>
-    <a href = "#"> About Us </a>
+    <a href = "body"> Tell Your Story</a>
+    <a href = "intro"> Mission </a>
+    <a href = "team.html"> Meet The Team <a>
     
 </nav> <!--nav end-->
 </div> <!--head div end-->
@@ -60,11 +59,11 @@
 
 <footer>
      <nav>
-         <a href= "#">Home </a>
+         <a href= "head">Home </a>
          <a href = "#"> Stories </a>
-         <a href = "#"> Tell Your Story</a>
-         <a href = "#"> About Us </a>
-         <a href = "#"> Meet The Team <a>
+         <a href = "body"> Tell Your Story</a>
+         <a href = "intro"> Mission </a>
+         <a href = "team.html"> Meet The Team <a>
                 
      </nav> <!--nav footer end-->
 
