less files added

--- a/team.html
+++ b/team.html
@@ -60,11 +60,11 @@
 </div> <!--heather div end-->
 
 <div class = "kerry-ann">
-   <h2> Kerry-Anne Bates </h2>
+   <h2> Kerri-Anne Bates </h2>
     <h3> Web React Developer </h3>
     <img src = "picofkerryann" alt = "picture of kerry-ann bates">
     <p> blurb </p>
-    <a href = "https://github.com/Kerry-AnnBates"> Kerry-Anne's Github  </a>
+    <a href = "https://github.com/Kerri-AnnBates"> Kerri-Anne's Github  </a>
                 
     </div> <!--kerry-ann div end-->
 
