suggestion img files added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p> mission statement. purpose. brief intro</p>
 
-<img class = "introImg" src = "link" alt = "image of refugee here">
+<img class = "introImg" src = "img/kidsPeace.jpg" alt = "image of refugee here">
 
 </div> <!--intro class end-->
 
@@ -45,7 +45,7 @@
 
     <div class = "body">
 
-<img class = "bodyImg" src = "imagelinkforbody" alt = "another refugee image for body">
+<img class = "bodyImg" src = "img/groupSmiling.jpg" alt = "another refugee image for body">
 
     <h2> Real Story </h2>
     <p> info,stats, story here. </p>
@@ -55,7 +55,7 @@
     </div> <!--end of body div-->
 
 
-<img class = "bottomImg" src = "bottomimglink" alt = "bottom banner background image">
+<img class = "bottomImg" src = "img/equality.jpg" alt = "bottom banner background image">
 
 <footer>
      <nav>
@@ -67,7 +67,7 @@
                 
      </nav> <!--nav footer end-->
 
-     <a> Learn more about the team behind this project! </a>
+     <a href = "team.html">Learn more about the team behind this project! </a>
 
 </footer> <!--footer end-->
 
