--- a/team.html
+++ b/team.html
@@ -62,7 +62,7 @@
 <div class = "kerry-ann">
    <h2> Kerri-Anne Bates </h2>
     <h3> Web React Developer </h3>
-    <img src = "picofkerryann" alt = "picture of kerry-ann bates">
+    <img src = "picofkerryann" alt = "picture of kerri-ann bates">
     <p> blurb </p>
     <a href = "https://github.com/Kerri-AnnBates"> Kerri-Anne's Github  </a>
                 
