team page initial layout complete

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
      <img class = "body-img" src = "img/kidsSmiling.jpg" alt = "another refugee image for body">
 
 <div class = "body-text">
-    <h2> Real Story </h2>
+    <h2> The Real Story </h2>
     <p> People visiting the site will gain a better understanding of the refugee crisis and what it means to be a refugee. There are more people displaced in the world today than at any time since the end of World War II and it is more important than ever to help people develop empathy for each other.</p>
 
-    <button> Tell Your Story! </button>
+    <button> Share Your Story! </button>
 
 </div> <!--body-text div end-->
 
@@ -78,16 +78,19 @@
 <img class = "bottom-img" src = "img/equality-resize.jpg" alt = "bottom banner background image">
 
 <footer>
-     <nav>
-         <a href= "head">Home </a>
-         <a href = "#"> Stories </a>
-         <a href = "#"> Tell Your Story</a>
-         <a href = "team.html"> Meet The Team <a>
-                
-     </nav> <!--nav footer end-->
+    <div class = "help">
+    <h3> Get Involed: </h3>
+        <ul>
+            <li> <a href = "https://www.unicefusa.org/mission/starts-with-u/relief-for-children?gclid=Cj0KCQiAtrnuBRDXARIsABiN-7AZWWeyW35Fn8Ae-F0O0wM52EC2W6A9bwikYWl2umYgiXhS_k_gIzkaAvKOEALw_wcB">  Unicef USA </a> </li>
+            <li><a href = "https://www.airbnb.com/openhomes/refugee-housing">  AirBNB-Refugee Housing </a>    </li>
+            <li> <a href = "https://www.rescue.org/">International Rescue Committee </a> </li>
+        </ul>
+    </div> <!--help div end-->
+    <div class = "team-page">
 
      <a href = "team.html">Learn more about the team behind this project! </a>
-
+     
+    </div> <!--team page div end-->
 </footer> <!--footer end-->
 
 
