home page & team page layout complete. FINAL styling TO DO

--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
 
 <footer>
     <div class = "help">
-    <h3> Get Involed: </h3>
+    <h4> Get Involed: </h4>
         <ul>
             <li> <a href = "https://www.unicefusa.org/mission/starts-with-u/relief-for-children?gclid=Cj0KCQiAtrnuBRDXARIsABiN-7AZWWeyW35Fn8Ae-F0O0wM52EC2W6A9bwikYWl2umYgiXhS_k_gIzkaAvKOEALw_wcB">  Unicef USA </a> </li>
             <li><a href = "https://www.airbnb.com/openhomes/refugee-housing">  AirBNB-Refugee Housing </a>    </li>
             <li> <a href = "https://www.rescue.org/">International Rescue Committee </a> </li>
         </ul>
     </div> <!--help div end-->
-    <div class = "team-page">
+    <div class = "team-link">
 
      <a href = "team.html">Learn more about the team behind this project! </a>
-     
+
     </div> <!--team page div end-->
 </footer> <!--footer end-->
 
