both pages desktop layouts complete. fonts/colors to do

--- a/team.html
+++ b/team.html
@@ -26,6 +26,8 @@
            <a href = "team.html"> Meet The Team</a>
                     
         </nav> <!--nav end-->
+
+        <img class ="logo" src ="img/logo.png" alt = "image of logo">
     </div> <!--head div end-->
 
 <div class = "header">
@@ -38,8 +40,9 @@
     <div class = "jasmine-content">
     <h2> Jasmine Terry </h2>
     <h3> Web UI Developer </h3>
-    <img class = "jasmine-img" src = "pic of me" alt = "picture of jasmine terry">
+    <img class = "jasmine-img" src = "img/me2.JPG" alt = "picture of jasmine terry">
     <p> blurb </p>
+    
     <button><a href = "https://github.com/jTCode2408"> Jasmine's Github </a> </button>
     </div><!--jasmine content end-->
 </div> <!--jasmine div end-->
