--- a/team.html
+++ b/team.html
@@ -40,9 +40,9 @@
     <div class = "jasmine-content">
     <h2> Jasmine Terry </h2>
     <h3> Web UI Developer </h3>
-    <img class = "jasmine-img" src = "img/me2.JPG" alt = "picture of jasmine terry">
+    <img class = "jasmine-img" src = "img/meRed.jpg" alt = "picture of jasmine terry">
     <p> blurb </p>
-    
+
     <button><a href = "https://github.com/jTCode2408"> Jasmine's Github </a> </button>
     </div><!--jasmine content end-->
 </div> <!--jasmine div end-->
