fonts styling both pages done. MVP goals complete

--- a/team.html
+++ b/team.html
@@ -6,6 +6,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Gaegu|Kavivanar|Mali|Sedgwick+Ave|Sedgwick+Ave+Display|Song+Myung|Vibes|Yeon+Sung&display=swap" rel="stylesheet"> <!--google font styles-->
+
   <title>Meet The Team</title>
   <link href="css/index.css" rel="stylesheet">
   
@@ -103,6 +106,7 @@
       <a href = "team.html"> Meet The Team </a>
                            
     </nav> <!--nav footer end-->
+    <img class ="logo" src ="img/logo.png" alt = "image of logo">
            
 </section>
 </div> <!--team container end-->
