--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <title>Refugee Stories</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Gaegu|Kavivanar|Mali|Sedgwick+Ave|Sedgwick+Ave+Display|Song+Myung|Vibes|Yeon+Sung&display=swap" rel="stylesheet"><!--font styles-->
+
+
   <!--main page font style-->
 
 
