button animation home page added

--- a/index.html
+++ b/index.html
@@ -79,14 +79,13 @@
     <h2> The Real Story </h2>
     <p> People visiting the site will gain a better understanding of the refugee crisis and what it means to be a refugee. There are more people displaced in the world today than at any time since the end of World War II and it is more important than ever to help people develop empathy for each other.</p>
 
-    <button> Share Your Story! </button>
+    <div class="story-btn"><button> <a href="#"> Tell Your Story</button></a></div> <!--story button end-->
 
 </div> <!--body-text div end-->
 
     </div> <!--end of body div-->
 
 
-<img class = "bottom-img" src = "img/equality-resize.jpg" alt = "bottom banner background image">
 
 <footer>
 
