--- a/team.html
+++ b/team.html
@@ -47,7 +47,12 @@
     <img class = "jasmine-img" src = "img/meRed.jpg" alt = "picture of jasmine terry">
     <p> blurb </p>
 
-    <button><a href = "https://github.com/jTCode2408"> Jasmine's Github </a> </button>
+        <div class="buttons">
+    <button><a href = "https://github.com/jTCode2408"> Github </a> </button>
+    <button><a href = "https://twitter.com/jazzycoding"> Twitter</a> </button>
+    <button><a href = "https://github.com/jTCode2408"> LinkedIn </a> </button>
+    <div> <!--buttons end-->
+        
     </div><!--jasmine content end-->
 </div> <!--jasmine div end-->
 
@@ -56,8 +61,16 @@
    <h2> Bao Pham </h2>
    <h3> Backend Developer </h3>
    <img class = "bao-img" src = "img/bao.png" alt = "picture of bao pham">
-   <p> blurb </p>
-  <button> <a href = "https://github.com/BaoPham92"> Bao's Github </a> </button>
+   <p> Ancestry: Vietnam.
+        Location: Maryland, MD.
+        Places To Visit: Germany, Greece, Singapore, & Malta </p>
+
+        <div class="buttons">
+  <button> <a href = "https://github.com/BaoPham92"> Github </a> </button>
+  <button> <a href = "https://twitter.com/GUL_Bao"> Twitter </a> </button>
+  <button> <a href = "https://www.linkedin.com/in/baopham92/"> LinkedIn </a> </button>
+        </div> <!--buttons end-->
+
     </div> <!--bao content end-->
 </div> <!--bao div end-->
 
@@ -66,8 +79,13 @@
   <h2> Heather Nuffer </h2>
    <h3> Web React Developer </h3>
    <img class = "heather-img" src = "img/heather.png" alt = "picture of heather nuffer">
-    <p> blurb </p>
-    <button> <a href = "https://github.com/ethyl2"> Heather's Github </a> </button>
+    <p> Born: Provo, UT. Hometown: Westland, MI. Current location: Lindon, UT.  Ancestry includes people from England, Sweden, & Finland. Places I hope to visit: Europe, Brazil & Scotland. </p>
+
+        <div class= "buttons">
+    <button> <a href = "https://github.com/ethyl2"> Github</a> </button>
+    <button> <a href = "https://github.com/ethyl2"> Twitter </a> </button>
+    <button> <a href = "https://github.com/ethyl2"> LinkedIn</a> </button>
+        </div><!--buttons end-->
 
     </div><!--heather content end--> 
 </div> <!--heather div end-->
@@ -80,10 +98,14 @@
     <img class= "kerri-ann-img" src = "img/kerri-ann.png" alt = "picture of kerri-ann bates">
 
     <p> blurb </p>
-   <button> <a href = "https://github.com/Kerri-AnnBates"> Kerri-Anne's Github  </a> </button>
+    <div class="buttons">
+   <button> <a href = "https://github.com/Kerri-AnnBates"> Github  </a> </button>
+   <button> <a href = "https://github.com/Kerri-AnnBates"> Twitter  </a> </button>
+   <button> <a href = "https://github.com/Kerri-AnnBates"> LinkedIn  </a> </button>
+    </div> <!--buttons end-->
     
     </div> <!--kerri-ann content end-->
-    </div> <!--kerry-ann div end-->
+    </div> <!--kerri-ann div end-->
 
 <div class = "brian">
     <div class = "brian-content">
@@ -91,9 +113,15 @@
     <h3> Project Leader </h3>
     <img class = "brian-img" src = "img/brian.png" alt = "picture of brian hauge">
     <p> blurb </p>
-    <button> <a href = "https://github.com/alphaseinor"> Brian's Github </a> </button>
+
+    <div class = "buttons">
+    <button> <a href = "https://github.com/alphaseinor"> Github </a> </button>
+    <button> <a href = "https://github.com/alphaseinor"> Twitter </a> </button>
+    <button> <a href = "https://github.com/alphaseinor"> Twitter </a> </button>
+    </div> <!--buttons end-->
+
     </div> <!--brian content end-->    
-     </div> <!--brain div end-->
+     </div> <!--brian div end-->
 
 </section> <!--team content end-->
 
