both page styling done. Mobile BOTH done

--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Gaegu|Kavivanar|Mali|Sedgwick+Ave|Sedgwick+Ave+Display|Song+Myung|Vibes|Yeon+Sung&display=swap" rel="stylesheet"> <!--google font styles-->
+  <link href="https://fonts.googleapis.com/css?family=Athiti|Baloo+Bhaijaan|Gaegu|Kavivanar|Mali|Sedgwick+Ave|Sedgwick+Ave+Display|Song+Myung|Vibes|Yeon+Sung&display=swap" rel="stylesheet"> <!--google font styles-->
 
   <title>Meet The Team</title>
   <link href="css/index.css" rel="stylesheet">
@@ -52,7 +52,7 @@
     <button><a href = "https://twitter.com/jazzycoding"> Twitter</a> </button>
     <button><a href = "https://github.com/jTCode2408"> LinkedIn </a> </button>
     <div> <!--buttons end-->
-        
+
     </div><!--jasmine content end-->
 </div> <!--jasmine div end-->
 
