tablet styling both pages done

--- a/team.html
+++ b/team.html
@@ -37,6 +37,8 @@
 <div class = "header">
     <h1> Meet The Refugees Team! </h1>
 
+    <h5> A little footprint on the team that came together to make this project come to life: </h5>
+
 </div> <!--header div end-->
 <section class = "team-content">
 
@@ -50,7 +52,7 @@
         <div class="buttons">
     <button><a href = "https://github.com/jTCode2408"> Github </a> </button>
     <button><a href = "https://twitter.com/jazzycoding"> Twitter</a> </button>
-    <button><a href = "https://github.com/jTCode2408"> LinkedIn </a> </button>
+    <button><a href = "https://www.linkedin.com/in/jasmineterry92/"> LinkedIn </a> </button>
     <div> <!--buttons end-->
 
     </div><!--jasmine content end-->
