--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <div class = "head">
 
  <nav>
-    <a href= "head">Home </a>
+    <a href= "index.html">Home </a>
     <a href = "#"> Stories </a>
-    <a href = "body"> Tell Your Story</a>
+    <a href = "index.html/body"> Tell Your Story</a>
     <a href = "team.html"> Meet The Team <a>
         
 </nav> <!--nav end-->
@@ -51,7 +51,7 @@
 <img class = "intro-img" src = "img/kidsPeace.jpg" alt = "another refugee image for body"> <!--intro-img class end-->
 
 </div> <!--intro class end-->
-
+<h2> Real People </h2>
 <div class = "video">
 
     <div class = "video-text">
@@ -73,8 +73,8 @@
      <img class = "body-img" src = "img/kidsSmiling.jpg" alt = "another refugee image for body">
 
 <div class = "body-text">
-    <h2> The Real Story </h2>
-    <p> People visiting the site will gain a better understanding of the refugee crisis and what it means to be a refugee. There are more people displaced in the world today than at any time since the end of World War II and it is more important than ever to help people develop empathy for each other.</p>
+    <h2> Real Stories </h2>
+    <p> People visiting the site will gain a better understanding of the refugee crisis and what it means to be a refugee.</p>
 
 
     <div class="story-btn"><button> <a href="#"> Share Your Story!</button></a></div> <!--story button end-->
