icon options added fo team links

--- a/team.html
+++ b/team.html
@@ -6,6 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <script src="https://kit.fontawesome.com/0f21789f44.js" crossorigin="anonymous"></script> <!--font awesome-->
 
   <link href="https://fonts.googleapis.com/css?family=Athiti|Baloo+Bhaijaan|Gaegu|Kavivanar|Mali|Sedgwick+Ave|Sedgwick+Ave+Display|Song+Myung|Vibes|Yeon+Sung&display=swap" rel="stylesheet"> <!--google font styles-->
 
@@ -50,9 +51,9 @@
     <p> blurb </p>
 
         <div class="buttons">
-    <button><a href = "https://github.com/jTCode2408"> Github </a> </button>
-    <button><a href = "https://twitter.com/jazzycoding"> Twitter</a> </button>
-    <button><a href = "https://www.linkedin.com/in/jasmineterry92/"> LinkedIn </a> </button>
+    <a href = "https://github.com/jTCode2408"> <i class="fab fa-github-square"></i> </a> 
+    <a href = "http://twitter.com/jazzycoding"><i class="fab fa-twitter-square" ></i> </a>
+    <a href = "https://www.linkedin.com/in/jasmineterry92/"> <i class="fab fa-linkedin"></i></a>
     <div> <!--buttons end-->
 
     </div><!--jasmine content end-->
@@ -69,8 +70,8 @@
 
         <div class="buttons">
   <button> <a href = "https://github.com/BaoPham92"> Github </a> </button>
-  <button> <a href = "https://twitter.com/GUL_Bao"> Twitter </a> </button>
-  <button> <a href = "https://www.linkedin.com/in/baopham92/"> LinkedIn </a> </button>
+  <a href = "https://twitter.com/GUL_Bao"><i class= "fab fa-twitter-square" ></i></a> 
+  <a href = "https://www.linkedin.com/in/baopham92/"><i class="fab fa-linkedin"></i> </a> 
         </div> <!--buttons end-->
 
     </div> <!--bao content end-->
@@ -84,9 +85,9 @@
     <p> Born: Provo, UT. Hometown: Westland, MI. Current location: Lindon, UT.  Ancestry includes people from England, Sweden, & Finland. Places I hope to visit: Europe, Brazil & Scotland. </p>
 
         <div class= "buttons">
-    <button> <a href = "https://github.com/ethyl2"> Github</a> </button>
-    <button> <a href = "https://github.com/ethyl2"> Twitter </a> </button>
-    <button> <a href = "https://github.com/ethyl2"> LinkedIn</a> </button>
+    <button class = "twitter"><i class="fab fa-twitter-square"></i><a href = "https://github.com/ethyl2"> Github</a> </button>
+    <i class="fab fa-twitter-square"></i> <a href = "https://github.com/ethyl2"> Twitter </a> 
+    <a href = "LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div><!--buttons end-->
 
     </div><!--heather content end--> 
@@ -103,7 +104,7 @@
     <div class="buttons">
    <button> <a href = "https://github.com/Kerri-AnnBates"> Github  </a> </button>
    <button> <a href = "https://github.com/Kerri-AnnBates"> Twitter  </a> </button>
-   <button> <a href = "https://github.com/Kerri-AnnBates"> LinkedIn  </a> </button>
+ <a href = "https://github.com/Kerri-AnnBates"> <i class="fab fa-linkedin"></i> </a></button>
     </div> <!--buttons end-->
     
     </div> <!--kerri-ann content end-->
@@ -119,7 +120,7 @@
     <div class = "buttons">
     <button> <a href = "https://github.com/alphaseinor"> Github </a> </button>
     <button> <a href = "https://github.com/alphaseinor"> Twitter </a> </button>
-    <button> <a href = "https://github.com/alphaseinor"> Twitter </a> </button>
+    <a href = "https://github.com/alphaseinor"> <i class="fab fa-linkedin"></i></a> 
     </div> <!--buttons end-->
 
     </div> <!--brian content end-->    
