test site changes

--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
         Places To Visit: Germany, Greece, Singapore, & Malta </p>
 
         <div class="buttons">
-  <button> <a href = "https://github.com/BaoPham92"> Github </a> </button>
+   <a href = "https://github.com/BaoPham92"> <i class="fab fa-github-square"></i> </a>
   <a href = "https://twitter.com/GUL_Bao"><i class= "fab fa-twitter-square" ></i></a> 
   <a href = "https://www.linkedin.com/in/baopham92/"><i class="fab fa-linkedin"></i> </a> 
         </div> <!--buttons end-->
@@ -85,8 +85,8 @@
     <p> Born: Provo, UT. Hometown: Westland, MI. Current location: Lindon, UT.  Ancestry includes people from England, Sweden, & Finland. Places I hope to visit: Europe, Brazil & Scotland. </p>
 
         <div class= "buttons">
-    <button class = "twitter"><i class="fab fa-twitter-square"></i><a href = "https://github.com/ethyl2"> Github</a> </button>
-    <i class="fab fa-twitter-square"></i> <a href = "https://github.com/ethyl2"> Twitter </a> 
+    <a href = "https://github.com/BaoPham92"> <i class="fab fa-github-square"></i> </a>
+    <a href = "https://twitter.com/GUL_Bao"><i class= "fab fa-twitter-square" ></i></a> 
     <a href = "LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div><!--buttons end-->
 
@@ -102,9 +102,9 @@
 
     <p> blurb </p>
     <div class="buttons">
-   <button> <a href = "https://github.com/Kerri-AnnBates"> Github  </a> </button>
-   <button> <a href = "https://github.com/Kerri-AnnBates"> Twitter  </a> </button>
- <a href = "https://github.com/Kerri-AnnBates"> <i class="fab fa-linkedin"></i> </a></button>
+   <a href = "https://github.com/Kerri-AnnBates"> <i class="fab fa-github-square"></i>  </a> 
+   <a href = "https://github.com/Kerri-AnnBates"> <i class= "fab fa-twitter-square"></i> </a> 
+ <a href = "https://github.com/Kerri-AnnBates"> <i class="fab fa-linkedin"></i> </a>
     </div> <!--buttons end-->
     
     </div> <!--kerri-ann content end-->
@@ -118,8 +118,8 @@
     <p> blurb </p>
 
     <div class = "buttons">
-    <button> <a href = "https://github.com/alphaseinor"> Github </a> </button>
-    <button> <a href = "https://github.com/alphaseinor"> Twitter </a> </button>
+     <a href = "https://github.com/alphaseinor"> <i class="fab fa-github-square"></i> </a>
+     <a href = "https://github.com/alphaseinor"> <i class= "fab fa-twitter-square"></i> </a> 
     <a href = "https://github.com/alphaseinor"> <i class="fab fa-linkedin"></i></a> 
     </div> <!--buttons end-->
 
