icons and team info added

--- a/team.html
+++ b/team.html
@@ -44,20 +44,20 @@
 <section class = "team-content">
 
 <div class = "jasmine">
-    <div class = "jasmine-content">
-    <h2> Jasmine Terry </h2>
-    <h3> Web UI Developer </h3>
-    <img class = "jasmine-img" src = "img/meRed.jpg" alt = "picture of jasmine terry">
-    <p> blurb </p>
-
-        <div class="buttons">
-    <a href = "https://github.com/jTCode2408"> <i class="fab fa-github-square"></i> </a> 
-    <a href = "http://twitter.com/jazzycoding"><i class="fab fa-twitter-square" ></i> </a>
-    <a href = "https://www.linkedin.com/in/jasmineterry92/"> <i class="fab fa-linkedin"></i></a>
-    <div> <!--buttons end-->
-
-    </div><!--jasmine content end-->
-</div> <!--jasmine div end-->
+    <div class="jasmine-content">
+        <h2> Jasmine Terry </h2>
+        <h3> Web UI Developer </h3>
+        <img class = "jasmine-img" src = "img/meRed.jpg" alt = "picture of jasmine terry">
+         <p> blurb </p>
+            
+    <div class="buttons">
+         <a href = "https://github.com/jTCode2408"> <i class="fab fa-github-square"></i> </a>
+         <a href = "https://twitter.com/jazzycoding"><i class= "fab fa-twitter-square" ></i></a> 
+        <a href = "https://www.linkedin.com/in/jasmineterry92/"><i class="fab fa-linkedin"></i> </a> 
+    </div> <!--buttons end-->
+            
+ </div> <!--bao content end-->
+</div> <!--bao div end-->
 
 <div class = "bao">
     <div class="bao-content">
@@ -100,9 +100,10 @@
 
     <img class= "kerri-ann-img" src = "img/kerri-ann.png" alt = "picture of kerri-ann bates">
 
-    <p> blurb </p>
+    <p> Born in Kingston, Jamaica and lived in Orlando, Fl for about 18 years now. I would like to visit England, Italy, and Barcelona. </p>
+
     <div class="buttons">
-   <a href = "https://github.com/Kerri-AnnBates"> <i class="fab fa-github-square"></i>  </a> 
+   <a href = " https://twitter.com/KerriAnnBates7"> <i class="fab fa-github-square"></i>  </a> 
    <a href = "https://github.com/Kerri-AnnBates"> <i class= "fab fa-twitter-square"></i> </a> 
  <a href = "https://github.com/Kerri-AnnBates"> <i class="fab fa-linkedin"></i> </a>
     </div> <!--buttons end-->
@@ -115,7 +116,13 @@
     <h2> Brian Hague </h2>
     <h3> Project Leader </h3>
     <img class = "brian-img" src = "img/brian.png" alt = "picture of brian hauge">
-    <p> blurb </p>
+    <p> Born in Texas, Lives in Dallas, TX
+            Nordic Heritage
+            Wants to visit:
+            Ghana
+            India
+            Japan
+            China </p>
 
     <div class = "buttons">
      <a href = "https://github.com/alphaseinor"> <i class="fab fa-github-square"></i> </a>
