content in body added

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 <div class = "video">
 
     <div class = "video-text">
-        <p>Ger Duany woke up one morning to gunshots that eventually led to his becoming one of the “Lost Boys of Sudan”, a child soldier, refugee, then US high school student, basketball player and actor.  Now a UNHCR Goodwill Ambassador for the East and Horn of Africa region,  he talks about his harrowing journey and feelings of hope and why investing in the future of refugees is the right and the smart thing to do.
-        In 2015, he was appointed UNHCR Goodwill Ambassador for he East and Horn of Africa region.</p>
+        <p>"Ger Duany woke up one morning to gunshots that eventually led to his becoming one of the “Lost Boys of Sudan”, a child soldier, refugee, then US high school student, basketball player and actor.  Now a UNHCR Goodwill Ambassador for the East and Horn of Africa region,  he talks about his harrowing journey and feelings of hope and why investing in the future of refugees is the right and the smart thing to do.
+        In 2015, he was appointed UNHCR Goodwill Ambassador for he East and Horn of Africa region." -[source]</p>
         
-       <p> This talk was given at a TEDx event using the TED conference format but independently organized by a local community. Learn more at <a href = "http://ted.com/tedx"> Ted.com/tedx </a> </p>
+       <p>Learn more at <a href = "http://ted.com/tedx"> Ted.com/tedx </a> </p>
     
         </div><!--video text end-->
         <div class = "youtube">
@@ -74,7 +74,12 @@
 
 <div class = "body-text">
     <h2> Real Stories </h2>
-    <p> People visiting the site will gain a better understanding of the refugee crisis and what it means to be a refugee.</p>
+    <p> There were more than 13 million newly displaced people in 2018</p> <br>
+    <p> The majority of refugees come from just five countries. </p> <br>
+    <p> Most refugees seek refuge in the country next door. </p> <br>
+    <p>Almost half of the world’s refugees are children </p> <br>
+    source: UNHCR’s Global Trends - Forced Displacement in 2018 report. <a href = "https://www.unhcr.org/statistics/unhcrstats/5d08d7ee7/unhcr-global-trends-2018.html"> </a>
+
 
 
     <div class="story-btn"><button> <a href="#"> Share Your Story!</button></a></div> <!--story button end-->
@@ -87,7 +92,7 @@
 
 
 <div class = "help">
-        <h4> Get Involed: </h4>
+        <h4> Get Involved: </h4>
             <ul>
                 <li> <a href = "https://www.unicefusa.org/mission/starts-with-u/relief-for-children?gclid=Cj0KCQiAtrnuBRDXARIsABiN-7AZWWeyW35Fn8Ae-F0O0wM52EC2W6A9bwikYWl2umYgiXhS_k_gIzkaAvKOEALw_wcB">  Unicef USA </a> </li>
                 <li><a href = "https://www.airbnb.com/openhomes/refugee-housing">  AirBNB-Refugee Housing </a>    </li>
