--- a/team.html
+++ b/team.html
@@ -26,8 +26,7 @@
 
         <nav class= "team-nav">
            <a href= "index.html">Home </a>
-           <a href = "#"> Stories </a>
-           <a href = "#"> Tell Your Story</a>
+           <a href = "https://refugees-stories-kbh.netlify.com/"> Stories </a>
            <a href = "team.html"> Meet The Team</a>
                     
         </nav> <!--nav end-->
@@ -132,8 +131,7 @@
 
     <nav class = "team-nav">
       <a href= "index.html">Home </a>
-      <a href = "#"> Stories </a>
-      <a href = "#"> Tell Your Story</a>
+      <a href = "https://refugees-stories-kbh.netlify.com/"> Stories </a>
       <a href = "team.html"> Meet The Team </a>
                            
     </nav> <!--nav footer end-->
