updated final. Spelling fixes

--- a/team.html
+++ b/team.html
@@ -83,9 +83,9 @@
     <p> Heather was born in Provo, UT; grew up in Westland, MI, and currently lives in Lindon, UT. Hailing from English, Swedish, and Finnish ancestry she hopes to someday visit Europe, Brazil, and Scotland. </p>
 
         <div class= "buttons">
-    <a href = "https://github.com/BaoPham92"> <i class="fab fa-github-square fa-3x"></i> </a>
-    <a href = "https://twitter.com/GUL_Bao"><i class= "fab fa-twitter-square fa-3x" ></i></a> 
-    <a href = "LinkedIn"><i class="fab fa-linkedin fa-3x"></i></a>
+    <a href = "https://github.com/ethyl2"> <i class="fab fa-github-square fa-3x"></i> </a>
+    <a href = "https://twitter.com/ethyl22000"><i class= "fab fa-twitter-square fa-3x" ></i></a> 
+    <a href = "https://www.linkedin.com/in/heather-nuffer/"><i class="fab fa-linkedin fa-3x"></i></a>
         </div><!--buttons end-->
 
     </div><!--heather content end--> 
@@ -101,8 +101,8 @@
     <p> Kerri-Anne was born in Kingston, Jamaica and has lived in Orlando, Fl for about 18 years now. She hopes to someday visit England, Italy, and Barcelona. </p>
 
     <div class="buttons">
-   <a href = " https://twitter.com/KerriAnnBates7"> <i class="fab fa-github-square fa-3x"></i>  </a> 
-   <a href = "https://github.com/Kerri-AnnBates"> <i class= "fab fa-twitter-square fa-3x"></i> </a> 
+   <a href = "https://github.com/Kerri-AnnBates"> <i class="fab fa-github-square fa-3x"></i>  </a> 
+   <a href = "https://twitter.com/KerriAnnBates7"> <i class= "fab fa-twitter-square fa-3x"></i> </a> 
  <a href = "https://github.com/Kerri-AnnBates"> <i class="fab fa-linkedin fa-3x"></i> </a>
     </div> <!--buttons end-->
     
